--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -990,9 +990,9 @@ css_prefix: true
 inject:
   head:
     - <script data-pjax src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
+    - <script data-pjax src="https://jsd.sxiaohe.top/npm/echarts@4.7.0/dist/echarts.min.js"></script>
     - <link rel="preload" src="/img/todayCardCover.avif" />
     - <script src="/sw.js"></script>
-    - <script src="https://jsd.sxiaohe.top/npm/echarts@4.7.0/dist/echarts.min.js"></script>
     #- <link rel="stylesheet" href="/xxx.css">
   bottom:
     # - <script src="xxxx"></script>
@@ -1032,8 +1032,6 @@ CDN:
 
   option:
     main_css: /css/index.css
-    jquery: https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js
-    echarts: https://jsd.sxiaohe.top/npm/echarts@4.7.0/dist/echarts.min.js
     # main:
     # utils:
     # translate:
