--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -36,6 +36,61 @@ essay:
   enable: true
   home_mini: true
 
+# --------------------------- start ---------------------------
+# Home Top Banner
+# 首页顶部
+hometop:
+  enable: false
+  banner:
+    title: 分享技术<br >与科技生活 # 大字
+    desc:
+      一个热爱生活的人 # 小字
+      # - 我只是一个普通的程序员
+      # - 但我有一个不平凡的梦想
+      # - 我希望能够改变世界
+    icon:
+      # HTML: # name
+      #   img: https://i.postimg.cc/vBWVnY8q/html.png # url
+      #   color: "#e9572b" # color
+      # JS:
+      #   img: https://i.postimg.cc/3N10Ltv2/js.png
+      #   color: "#f7cb4f"
+      # Docker:
+      #   img: https://i.postimg.cc/8Pk6Fg24/docker.png
+      #   color: "#57b6e6"
+      # Flutter:
+      #   img: https://i.postimg.cc/hPC7T3gB/flutter.png
+      #   color: "#ffffff"
+      # WebPack:
+      #   img: https://i.postimg.cc/dVLZBmtT/webpack.png
+      #   color: "#2e3a41"
+      # Git:
+      #   img: https://i.postimg.cc/nhgjwjCS/git.png
+      #   color: "#df5b40"
+  group:
+    # 热门: /tags/Fire/ || fas fa-fire || linear-gradient(to right,#f65,#ffbf37)
+  recommendList:
+    enable: true
+    sup: 置顶
+    title: Solitude 官方文档
+    url: https://solitude.js.org/
+    img: /img/default.avif
+    color: "none"
+# Article Top Banner
+# 文章推荐轮播图
+carousel: true
+# --------------------------- end ---------------------------
+# --------------------------- start ---------------------------
+# Brevity Page
+# 即可短文
+brevity:
+  enable: false
+  home_mini: false
+  music: false
+  page: /essay/
+  style: 1
+  strip: 30
+# --------------------------- end ---------------------------
 ## abbrlink config
 abbrlink:
   alg: crc32      #support crc16(default) and crc32 进制
