--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -40,7 +40,7 @@ essay:
 # Home Top Banner
 # 首页顶部
 hometop:
-  enable: false
+  enable: true
   banner:
     title: 分享技术<br >与科技生活 # 大字
     desc:
@@ -79,17 +79,6 @@ hometop:
 # Article Top Banner
 # 文章推荐轮播图
 carousel: true
-# --------------------------- end ---------------------------
-# --------------------------- start ---------------------------
-# Brevity Page
-# 即可短文
-brevity:
-  enable: false
-  home_mini: false
-  music: false
-  page: /essay/
-  style: 1
-  strip: 30
 # --------------------------- end ---------------------------
 ## abbrlink config
 abbrlink:
