--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -1074,7 +1074,7 @@ inject:
     # - <script src="xxxx"></script>
     - <link rel="stylesheet" href="/css/font-awesome-animation.min.css"  media="defer" onload="this.media='all'">
     - <link rel="stylesheet" href="https://chinese-fonts-cdn.deno.dev/packages/lxgwwenkaibright/dist/LXGWBright-Regular/result.css">
-    - <script data-pace-options='{ "restartOnRequestAfter":false,"eventLag":false}' src="https://jsd.sxiaohe.top/npm/pace-js@latest/pace.min.js"></script>
+    - <script async data-pace-options='{ "restartOnRequestAfter":false,"eventLag":false}' src="https://jsd.sxiaohe.top/npm/pace-js@latest/pace.min.js"></script>
     - <script async src="/js/waterfall.js"></script> # 瀑布流JS
     - <script async src="https://jsd.sxiaohe.top/gh/wanlany/CDN/js/font_3586335_hsivh70x0fm.js"></script>
     - <script async src="https://jsd.sxiaohe.top/gh/wanlany/CDN/js/font_3636804_glcijzcpx7f.js" ></script>
